--- a/toy_example/toy_ope_r_exp.Rmd
+++ b/toy_example/toy_ope_r_exp.Rmd
@@ -81,7 +81,7 @@ for (kk in 1:num_simu) {
       V_wass = robust_ope_wass(estimated_model$P, estimated_model$R, estimated_model$policy, delta = wass_constraints, 
                            D, gamma=0.95, p=1, tol=1e-3,max_iter=1000)$V_robust
         
-      tv_constraints = rep(delta_list[i], n_clusters)
+      tv_constraints = rep(tv_dist_list[i], n_clusters)
       V_tv = robust_ope_tv(estimated_model$P, estimated_model$R, estimated_model$policy, delta = tv_constraints, 
                             gamma=0.95, tol=1e-3,max_iter=1000)$V_robust
       
@@ -221,6 +221,7 @@ for (j in 1:length(delta_list)) {
 # save the approximate true policy values
 write.csv(est_value_abs,file = "est_value_abs.csv")
 ```
+
 
 
 
