--- a/ohiot1dm/pat1_6_r_exp.Rmd
+++ b/ohiot1dm/pat1_6_r_exp.Rmd
@@ -197,8 +197,8 @@ compute_hybrid_distances <- function(centroids_0, centroids_1, lambda = 0.3) {
 ```{r}
 
 lambda = 0.3
-n_clusters_0_list = c(3,15,3,5,5,19)
-n_clusters_1_list = c(2,8,2,3,3,5)
+n_clusters_0_list = rep(19,6)
+n_clusters_1_list = rep(3,6)
 ```
 
 
@@ -444,8 +444,15 @@ print(p)
 
 
 ```{r}
-ggsave("ohiodm_ope_plot_cohort1.png", plot = p, width = 6, height = 4, dpi = 300)
+ggsave(
+  filename = "ohiodm_ope_plot_cohort1.pdf",
+  plot = p,
+  width = 6.75,
+  height = 4.25,
+  units = "in"
+)
 ```
+
 
 
 
